2013-03-27  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_plugin_definition.php: Updated help.

2013-03-27  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_conf_alert_template.php: Added a new help file.

2013-03-26 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_reporting.php, include/functions_groups.php:
	changes for to use in the calls in mobile version.
	
	* mobile/index.php, mobile/operation/events.php,
	mobile/operation/modules.php, mobile/operation/events,
	mobile/operation/events/events.php, mobile/operation/agents.php,
	mobile/operation/tactical.php, mobile/operation/alerts.php,
	mobile/include/style/main.css, mobile/include/ui.class.php,
	mobile/include/user.class.php: changes and improves in the code
	of mobile.
	
	* mobile/operation/agents/*, mobile/operation/servers/*: removed
	the old files from version pandora mobile 4.

2013-03-26 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_tags.php, include/functions_reporting.php,
	include/constants.php, include/functions_ui.php,
	operation/agentes/estado_agente.php,
	operation/agentes/status_monitor.php, mobile/include/style/main.css:
	some cleans and remove unuseless code.

2013-03-25 Hirofumi Kosaka <kosaka@rworks.jp>

	* pandora_console_install: Fixed false recognition of RHEL6.4
	(it had been recoginzed as Ubuntu incorrecty because of its
	"/etc/lsb-release").

2013-03-25  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_manage_alert_list.php: Added description for
	threshold.

2013-03-22 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/images/ajax-loader.gif, mobile/operation/events.php,
	mobile/include/ui.class.php, mobile/include/style/main.css: more
	changes in the events view.

2013-03-22 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/db/mysql.php: fixed the querys for the columns with
	empty string in the function
	"mysql_db_format_array_where_clause_sql".
	